--- a/about.html
+++ b/about.html
@@ -24,10 +24,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item ">
-                    <a class="nav-link" href="/siteindex.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="https://ms-mahi.github.io/iCoderSampleTemplate/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/about.html">About</a>
+                    <a class="nav-link" href="https://ms-mahi.github.io/about.html">About</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -41,7 +41,7 @@
                         <a class="dropdown-item" href="#">Note here</a>
                     </div>
                 <li class="nav-item">
-                    <a class="nav-link" href="/contact.html">Contact US</a>
+                    <a class="nav-link" href="https://ms-mahi.github.io/contact.html">Contact US</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
